e2e/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-otel-e2e
---
apiVersion: v1
kind: Namespace
metadata:
  name: haproxy-ingress
