e2e/k8s/02-haproxy-ingress.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: haproxy-ingress
  namespace: haproxy-ingress
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: haproxy-ingress
rules:
  - apiGroups: [""]
    resources: [configmaps, endpoints, nodes, pods, services, namespaces, events, serviceaccounts, secrets]
    verbs: [get, list, watch]
  - apiGroups: ["extensions", "networking.k8s.io"]
    resources: [ingresses, ingressclasses, ingresses/status]
    verbs: [get, list, watch, update]
  - apiGroups: ["extensions", "networking.k8s.io"]
    resources: [ingresses/status]
    verbs: [update]
  - apiGroups: [""]
    resources: [secrets]
    verbs: [get, list, watch, create, patch, update]
  - apiGroups: [discovery.k8s.io]
    resources: [endpointslices]
    verbs: [get, list, watch]
  - apiGroups: [core.haproxy.org]
    resources: [defaults, globals, backends]
    verbs: [get, list, watch, update]
  - apiGroups: ["coordination.k8s.io"]
    resources: ["leases"]
    verbs: ["get", "list", "watch", "create", "update", "delete"]
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: haproxy-ingress
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: haproxy-ingress
subjects:
  - kind: ServiceAccount
    name: haproxy-ingress
    namespace: haproxy-ingress
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: haproxy.org/ingress-controller
---
apiVersion: v1
kind: Secret
metadata:
  name: haproxy-default-cert
  namespace: haproxy-ingress
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDVENDQWZHZ0F3SUJBZ0lVRVB0b1FqNFY2SGJTV0hadVE5S3F0NUczT2xzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZERVNNQkFHQTFVRUF3d0piRzlqWVd4b2IzTjBNQjRYRFRJMk1ERXlOakl4TXpFMU5Wb1hEVEkzTURFeQpOakl4TXpFMU5Wb3dGREVTTUJBR0ExVUVBd3dKYkc5allXeG9iM04wTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGCkFBT0NBUThBTUlJQkNnS0NBUUVBMGd5aVlHb05WNGpoWGx0bjdRQXhXYkZ0WWJqUU04cmVEODNNZjJrVlpCdGMKMk9FOGlXT1NGMlFzdGpGNWNzOFp6NEpyNk1qWlZDM3FOMkZUclFWWjFUeU1jeWZST2pkdzNXbElDZDd6SmdZZApndXVvWHNSNTM3cDZTR [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRFNES0pnYWcxWGlPRmUKVzJmdEFERlpzVzFodU5Benl0NFB6Y3gvYVJWa0cxelk0VHlKWTVJWFpDeTJNWGx5enhuUGdtdm95TmxVTGVvMwpZVk90QlZuVlBJeHpKOUU2TjNEZGFVZ0ozdk1tQmgyQzY2aGV4SG5mdW5wSVVXdEdFR05Jb0VOUFNXVzBlc25ECis4NldOa3BLUVlCNjVGeDQxbHg1YUJsMzNBUEwrZUU5M2x6RHduU1h3QXh4RTk2dDRsUEVCUldGSmJ1WitCM2sKOVJ4VnVrcVdTWkt5U1NVRm5ybXQ1OTFlYUF2OTdkWENCMDBlWXlCRFpudlpCYTZvOXZ0RDFRZitSVmdGRDRRdwp6dVVDZlZIQU9manlMR [...]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: haproxy-config
  namespace: haproxy-ingress
data: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress
  namespace: haproxy-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haproxy-ingress
  template:
    metadata:
      labels:
        app: haproxy-ingress
    spec:
      serviceAccountName: haproxy-ingress
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: haproxy-ingress
          image: haproxytech/kubernetes-ingress:3.2.15
          args:
            - --default-ssl-certificate=haproxy-ingress/haproxy-default-cert
            - --configmap=haproxy-ingress/haproxy-config
            - --http-bind-port=8080
            - --https-bind-port=8443
            - --ingress.class=haproxy
            - --publish-service=haproxy-ingress/haproxy-ingress
            - --log=info
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
            - name: stat
              containerPort: 1024
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: POD_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: POD_IP
              valueFrom:
                fieldRef:
                  fieldPath: status.podIP
            - name: OTEL_SERVICE_NAME
              value: haproxy-ingress-e2e
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://jaeger.haproxy-ingress-otel-e2e.svc.cluster.local:4318
            - name: OTEL_TRACES_SAMPLER
              value: always_on
            - name: OTEL_PROPAGATORS
              value: w3c
          startupProbe:
            httpGet:
              path: /healthz
              port: 1042
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /healthz
              port: 1042
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 1042
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          resources: {}
          volumeMounts:
            - name: tmp
              mountPath: /tmp
              subPath: tmp
            - name: tmp
              mountPath: /run
              subPath: run
      volumes:
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
  namespace: haproxy-ingress
spec:
  type: NodePort
  selector:
    app: haproxy-ingress
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 8443
      nodePort: 30443
