e2e/k8s/03-test-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: haproxy-otel-e2e
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:latest
          args:
            - "-text=Hello from e2e test!"
            - "-listen=:5678"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: haproxy-otel-e2e
spec:
  selector:
    app: echo-server
  ports:
    - port: 80
      targetPort: 5678
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  namespace: haproxy-otel-e2e
  annotations:
    haproxy.org/ingress.class: haproxy
spec:
  ingressClassName: haproxy
  rules:
    - host: echo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo-server
                port:
                  number: 80
